@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>berker.banking</groupId>
+    <groupId>org.example</groupId>
     <artifactId>BankingSystem</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
@@ -15,8 +15,8 @@
     </modules>
 
     <properties>
-        <maven.compiler.source>17</maven.compiler.source>
-        <java.version>17</java.version>
+        <maven.compiler.source>19</maven.compiler.source>
+        <java.version>19</java.version>
         <spring-boot.version>2.7.1</spring-boot.version>
         <postgresql.version>42.3.5</postgresql.version>
         <spring-retry.version>1.3.3</spring-retry.version>
@@ -123,7 +123,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.10.1</version>
                 <configuration>
-                    <release>17</release>
+                    <release>${java.version}</release>
+                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
